--- a/htdocs/css/kmom01.css
+++ b/htdocs/css/kmom01.css
@@ -14,3 +14,166 @@
 .rm-navbar-max {
     display: none;
 }
+
+/* poor man's normalize */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    background-color: #bee;
+}
+
+/* Header */
+
+.region-header-col-1 {
+    float: left;
+    width: 20%;
+    margin-right: 10px;
+}
+
+.region-header-col-2 {
+    float: left;
+    width: 75%;
+}
+
+.my-navbar {
+    list-style-type: none;
+    padding: 25px;
+}
+
+.my-navbar li {
+    display: inline;
+    padding: 10px 15px;
+    border: black 1px solid;
+    border-radius: 5px;
+    background-color: #567;
+}
+
+.my-navbar li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.site-logo {
+    display: none;
+}
+
+/* Container */
+
+.outer-wrap {
+    width: 100%;
+    overflow: auto;
+}
+
+.inner-wrap {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.inner-wrap-main {
+    padding: 25px 0;
+}
+
+.row::after {
+    clear: both;
+}
+
+.right {
+    float: right;
+    margin: 25px;
+}
+
+.right img {
+    border-radius: 5%;
+}
+
+figure figcaption p {
+    text-align: center;
+}
+
+.article h1 {
+    text-align: center;
+    padding: 10px;
+    font-size: 40px;
+}
+
+.article h2 {
+    padding: 10px 0;
+    font-size: 30px;
+}
+
+.article p {
+    padding: 15px 0;
+    text-align: justify;
+}
+
+.music ul {
+    margin: 0 auto;
+    max-width: 200px;
+    padding: 25px;
+}
+
+.music ul li {
+    list-style-type: none;
+    padding: 15px;
+    border: 1px solid;
+    background-color: #333;
+    border-radius: 10px;
+    margin: 5px;
+    text-align: center;
+}
+
+.music ul li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.byline {
+    clear: both;
+    border: 1px black solid;
+    max-width: 600px;
+    background-color: #cff;
+}
+
+.byline p {
+    padding: 30px 30px 50px 30px;
+}
+
+.region-sidebar-left {
+    float: left;
+    margin: 25px;
+}
+
+/* Footer */
+.outer-wrap-footer {
+    background-color: #411;
+    color: #fff;
+    min-height: 15em;
+}
+
+.inner-wrap-footer {
+    padding: 25px;
+}
+
+.footer-column {
+    width: 33%;
+    float: left;
+}
+
+.region-footer>.block {
+    clear: both;
+    padding-top: 30px;
+    width: 100%;
+    text-align: center;
+    min-height: 4em;
+}
+
+.region-footer>.block a {
+    padding: 10px;
+    display: inline-block;
+    color: #fff;
+}
