--- a/theme/src/base/base.less
+++ b/theme/src/base/base.less
@@ -8,6 +8,10 @@
 @colorFooter: #fff;
 @fontFamilyBody: serif;
 
+* {
+    box-sizing: border-box;
+}
+
 html {
     overflow-y: scroll;
     background-color: @bgColorHtml;
