--- a/theme/src/layout/responsive.less
+++ b/theme/src/layout/responsive.less
@@ -7,3 +7,28 @@
         display: none;
     }
 }
+
+
+@media screen and (max-width: 1200px) {
+    .region-header-col-1,
+    .region-header-col-3 {
+        width: 15%;
+        float: left;
+    }
+
+    .region-header-col-2 {
+        width: 70%;
+        float: left;
+        text-align: center;
+    }
+
+    .my-navbar li a {
+        padding: 0.5em;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .region-header-col-2 {
+        display: none;
+    }
+}
