--- a/htdocs/css/kmom01_v2.css
+++ b/htdocs/css/kmom01_v2.css
@@ -33,6 +33,9 @@
 /**
  * Base style to affect HTML elements on a general scale.
  */
+* {
+  box-sizing: border-box;
+}
 html {
   overflow-y: scroll;
   background-color: #bee;
@@ -174,6 +177,26 @@ img {
  */
 @media screen and (max-width: 1500px) {
   .site-logo {
+    display: none;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .region-header-col-1,
+  .region-header-col-3 {
+    width: 15%;
+    float: left;
+  }
+  .region-header-col-2 {
+    width: 70%;
+    float: left;
+    text-align: center;
+  }
+  .my-navbar li a {
+    padding: 0.5em;
+  }
+}
+@media screen and (max-width: 900px) {
+  .region-header-col-2 {
     display: none;
   }
 }
