--- a/htdocs/css/04_colorful.css
+++ b/htdocs/css/04_colorful.css
@@ -4817,15 +4817,15 @@ template {
 }
 html {
   overflow-y: scroll;
-  background-color: #e8f4f8;
+  background-color: #850d51;
 }
 body {
   margin: 0;
   padding: 0;
   color: #333;
-  background-color: #e8f4f8;
-  font-family: 'Raleway', sans-serif;
-  font: 20px/1.2 'Raleway', sans-serif;
+  background-color: #ff3;
+  font-family: 'Kalam', cursive;
+  font: 20px/1.2 'Kalam', cursive;
 }
 h1,
 h2,
@@ -4833,7 +4833,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Permanent Marker', cursive;
 }
 img {
   max-width: 100%;
@@ -4844,7 +4844,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Permanent Marker', cursive;
   margin-top: 24px;
   margin-bottom: 24px;
 }
@@ -5168,8 +5168,8 @@ hr::after {
  */
 .my-navbar {
   list-style-type: none;
-  background-color: #e8f4f8;
-  color: #333;
+  background-color: #993d71;
+  color: beige;
 }
 .my-navbar li {
   display: inline-block;
@@ -5179,7 +5179,7 @@ hr::after {
   display: none;
 }
 .my-navbar li:hover {
-  background-color: #65acc9;
+  background-color: #e65caa;
 }
 .my-navbar li a {
   text-decoration: none;
@@ -5206,7 +5206,7 @@ hr::after {
 * Breadcrumb layout
 */
 .inner-wrap-breadcrumb {
-  background-color: #e8f4f8;
+  background-color: #ff3;
 }
 .inner-wrap-breadcrumb a {
   color: #333;
@@ -5248,7 +5248,7 @@ hr::after {
   max-width: 1100px;
 }
 .inner-wrap-main {
-  background-color: #e8f4f8;
+  background-color: #ff3;
   color: #333;
 }
 .region-main {
@@ -5278,14 +5278,14 @@ hr::after {
   margin-right: 0.52083333%;
 }
 .region-main a {
-  color: #00f;
+  color: #4c0d6f;
 }
 /**
 * Sidebar layout
 */
 .wrap-sidebar {
-  background-color: #e8f4f8;
-  color: #333;
+  background-color: #d2f68a;
+  color: #4c0d6f;
 }
 .wrap-sidebar ul {
   list-style: none;
@@ -5294,10 +5294,10 @@ hr::after {
   padding-bottom: 24px;
 }
 .wrap-sidebar ul li:hover {
-  background-color: #c1e1ec;
+  background-color: #c0f25b;
 }
 .wrap-sidebar ul li a {
-  color: #333;
+  color: #4c0d6f;
   text-decoration: none;
 }
 .region-sidebar-left,
@@ -5374,7 +5374,7 @@ hr::after {
 .music ul li {
   list-style-type: none;
   padding: 12px;
-  background-color: #147;
+  background-color: #993d71;
   border-radius: 10px;
   margin-bottom: 12px;
   text-align: center;
@@ -5390,7 +5390,7 @@ hr::after {
   clear: both;
   outline: 1px black solid;
   overflow: auto;
-  background-color: #c1e1ec;
+  background-color: #ffff00;
 }
 .byline p {
   padding: 30px 30px 50px 30px;
@@ -5412,8 +5412,8 @@ hr::after {
   margin-left: auto;
   max-width: 100%;
   border-bottom: 1px solid black;
-  background-color: #e8f4f8;
-  color: #333;
+  background-color: #993d71;
+  color: beige;
 }
 .inner-wrap-header .row {
   margin-right: auto;
@@ -5458,7 +5458,7 @@ hr::after {
 * Footer layout
 */
 .outer-wrap-footer {
-  background-color: #411608;
+  background-color: #850d51;
   color: #fff;
 }
 .footer-column {
@@ -5799,3 +5799,17 @@ a.rm-button.rm-clicked .rm-button-face-2 {
 /**
  * My own settings, not currently in their own module.
  */
+@font-face {
+  font-family: 'Permanent Marker';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Permanent Marker Regular'), local('PermanentMarker-Regular'), url(https://fonts.gstatic.com/s/permanentmarker/v9/Fh4uPib9Iyv2ucM6pGQMWimMp004La2Ceg.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Kalam';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Kalam'), local('Kalam-Regular'), url(https://fonts.gstatic.com/s/kalam/v10/YA9dr0Wd4kDdMthROCI.ttf) format('truetype');
+}
