--- a/theme/src/layout/vgrid.less
+++ b/theme/src/layout/vgrid.less
@@ -141,6 +141,12 @@
     & a {
         color: @colorMainLInk;
     }
+    & h1 a {
+        color: #222;
+        &:hover {
+            background-color: #ccc;
+        }
+    }
     margin-bottom: @magicNumber * 2;
 }
 
