--- a/theme/src/kmom06-designprinciper.less
+++ b/theme/src/kmom06-designprinciper.less
@@ -1,7 +1,7 @@
 /*!
- * Stylesheet for design kmom05.
+ * Stylesheet for design kmom06.
  *
- * This stylesheet is for the design course and kmom05 where we use LESS.
+ * This stylesheet is for the design course and kmom06 where we use LESS.
  */
 
 
@@ -120,3 +120,5 @@ figure.figure-codepen {
 // Magic number and base fontsize
 @magicNumber:  24px;  // 22px
 @fontSizeBody: 20px;
+
+@import "module/principer.less";
